managing applications using profile specific configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 logging.level.org.springframework=debug
-spring.devtools.restart.enabled=true
+spring.profiles.active=dev
+#the above line 2 sets the environment profile in where you want the environment to be active
+#in this case it will read the specific configuration for development from the application-dev.properties file
