sample implementation of spring boot's @ConfigurationProperties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ logging.level.org.springframework=debug
 spring.profiles.active=dev
 #the above line 2 sets the environment profile in where you want the environment to be active
 #in this case it will read the specific configuration for development from the application-dev.properties file
+
+currency-service.url=http://default1.in28minutes.com
+currency-service.username=defaultusername
+currency-service.key=defaultkey
+
