--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ currency-service.url=http://default1.in28minutes.com
 currency-service.username=defaultusername
 currency-service.key=defaultkey
 
+management.endpoints.web.exposure.include=*
+
